[gd_scene load_steps=3 format=3 uid="uid://dn1w8045h2oat"]

[ext_resource type="Script" path="res://scenes/game/elements/Wall.gd" id="1_ytcpb"]
[ext_resource type="PackedScene" uid="uid://dfwc0dfw20run" path="res://scenes/game/systems/PolygonByMouse.tscn" id="2_7b4y6"]

[node name="Wall" type="Area2D"]
script = ExtResource("1_ytcpb")

[node name="PolygonByMouse" parent="." instance=ExtResource("2_7b4y6")]
limit_max_lenght = false
selected_node_type = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(252, 206, 183, 279, 149, 229)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="max_len_rised" from="PolygonByMouse" to="." method="_on_polygon_by_mouse_max_len_rised"]
[connection signal="new_step" from="PolygonByMouse" to="." method="_on_polygon_by_mouse_new_step"]
